--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>302191716332-v9j1gjlrjl0mq88p5rkrb9nsah4ouqr3.apps.googleusercontent.com</string>
+	<string>302191716332-2oe6061mhh4ncfda1fg83mk2us6q48si.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.302191716332-v9j1gjlrjl0mq88p5rkrb9nsah4ouqr3</string>
+	<string>com.googleusercontent.apps.302191716332-2oe6061mhh4ncfda1fg83mk2us6q48si</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBNzVx86Ks0RVxNL83UDvLoDxpKj_YiCQA</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.ilovealcazar.com</string>
+	<string>com.mundipromo.com</string>
 	<key>PROJECT_ID</key>
 	<string>promosapp-f65a4</string>
 	<key>STORAGE_BUCKET</key>
@@ -33,7 +33,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:302191716332:ios:7a217675e8e7065b</string>
+	<string>1:302191716332:ios:756ede588ad082b4</string>
 	<key>DATABASE_URL</key>
 	<string>https://promosapp-f65a4.firebaseio.com</string>
 </dict>
